# fabric-testing

./: .gitignore  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: lint-and-format.yml  manipulate_version.py  pr.yml  release.yml  unittest.yml
docs/: fabric_api.md  notebook.md  onelake.md
src/: requirements.txt
src/fabrictesting/fabric_api/: api_access.py
src/fabrictesting/notebook/: create.py  get_definitions.py  get_notebook_status.py  notebook-content.ipynb  run.py  update.py  upload.py
src/fabrictesting/onelake_api/: api_access.py  api_file.py
src/fabrictesting/test_job/: fetch.py  submit.py
src/fabrictesting/utilities/: collect.py  context_managers.py  load_fetch_url_log.py  save_fetch_url_log.py  validate_args.py
tests/fabric_api/: test_api_access.py
tests/notebook/: test_convert_notebook_base64.py  test_convert_platform_base64.py  test_create_platform_file_content.py  test_get_definition.py  test_get_notebook_status.py  test_load_default_notebook.py  test_load_default_notebook_v2.py  test_load_default_notebooks_dummies.py  test_notebook_parsing.py  test_run.py  test_run_notebook.py  test_upload.py  test_upload_poll.py
tests/notebook/dummy_notebooks/: notebook-content-standard-no-reqs-no-wheel.ipynb  notebook-content-standard-no-reqs.ipynb  notebook-content-standard-no-wheel.ipynb  notebook-content-standard.ipynb
tests/onelake_api/: test_api_access.py  test_api_file_upload_file.py
tests/test_job/: test_fetch.py  test_submit.py
tests/utilities/: test_collect.py  test_load_fetch_url_log.py  test_save_fetch_url_log.py  test_validate_args.py
