[metadata]
name = fabric-testing
author = LauJohansson
version = file: src/VERSION.txt
description = Testing functionalities for Microsoft Fabric
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Microsoft, Fabric, testing
url = https://github.com/LauJohansson/fabric-testing
license_files = LICENSE

[options]
python_requires = >=3.11
include_package_data = True
packages = find:
package_dir = 
	= src
install_requires =
    setuptools
    requests
    pytest

[options.packages.find]
where = src


[options.package_data]
* = *.yml

[options.entry_points]
console_scripts =
    fabric-testing-submit = fabrictesting.test_job.submit:main
    fabric-testing-fetch = fabrictesting.test_job.fetch:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores = __init__.py:F401

[isort]
profile = black

[black]
max-line-length = 88

[tool:pytest]
pythonpath = src
